Decap - WIP. Signs remain capped

Colored Stats - https://github.com/pret/pokeemerald/wiki/Colored-stats-by-nature-in-summary-screen

IV/EV Stat Display - https://www.pokecommunity.com/showpost.php?p=10161688&postcount=77
	-EVs are red, IVs are blue
	-Changed to a rolling page system
	-Added L/R button icon

Default options changed - https://www.pokecommunity.com/showpost.php?p=9967853&postcount=5

Can unlearn any attack - https://www.pokecommunity.com/showpost.php?p=10182839&postcount=119

Reusable TMs - https://www.pokecommunity.com/showpost.php?p=9980343&postcount=7

Can only buy TM/HM once - https://github.com/LOuroboros/pokeemerald/commit/2e6af4e1c4a55e100882d0ccb009d91cef8c0259

B/W Repel System - https://www.pokecommunity.com/showpost.php?p=9986048&postcount=9

Max Money Increased - https://www.pokecommunity.com/showpost.php?p=9986063&postcount=10

Running allowed everywhere - https://www.pokecommunity.com/showpost.php?p=9990848&postcount=13

Trainer classes each use their own pokeball - https://www.pokecommunity.com/showpost.php?p=10038105&postcount=22
	-Ability for unique balls per pokemon - https://www.pokecommunity.com/showpost.php?p=10050958&postcount=24
	-Fixed compatibility
	
Added Move option to held item menu - https://www.pokecommunity.com/showpost.php?p=10120157&postcount=43

Added Nickname option to party menu - https://www.pokecommunity.com/showpost.php?p=10120389&postcount=44
	-Name rater in Slateport only comments on name, doesn't offer to change it

Changed shiny chance to 1/4096 (16/65536)