@@ -1,4 +1,4 @@
-const struct Item gItems[] =
+fconst struct Item gItems[] =
 {
     [ITEM_NONE] =
     {
@@ -2777,9 +2777,9 @@ const struct Item gItems[] =
         .price = 3000,
         .holdEffect = HOLD_EFFECT_EXP_SHARE,
         .description = sExpShareDesc,
-        .pocket = POCKET_ITEMS,
-        .type = 4,
-        .fieldUseFunc = ItemUseOutOfBattle_CannotUse,
+        .pocket = POCKET_KEY_ITEMS,
+        .type = 2,
+        .fieldUseFunc = ItemUseOutOfBattle_ExpShare,
         .secondaryId = 0,
     },
 
