@@ -1253,6 +1253,8 @@ const u8 gText_Others[] = _("OTHERS");
 const u8 gText_Symbols[] = _("SYMBOLS");
 const u8 gText_Register2[] = _("REGISTER");
 const u8 gText_Exit2[] = _("EXIT");
+const u8 gOtherText_ExpShareOn[] = _("Turned on the Exp. Share.\pParty will now gain a portion\nof battle experience.{PAUSE_UNTIL_PRESS}");
+const u8 gOtherText_ExpShareOff[] = _("Turned off the Exp. Share.\pParty will no longer gain a portion\nof battle experience.{PAUSE_UNTIL_PRESS}");
 const u8 gText_QuitChatting[] = _("Quit chatting?");
 const u8 gText_RegisterTextWhere[] = _("Register text where?");
 const u8 gText_RegisterTextHere[] = _("Register text here?");
